--- a/css/login.css
+++ b/css/login.css
@@ -4,17 +4,14 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-body {
-}
 
 /* Style the login form container */
 .login-container {
-	/* height: 100vh; */
 	max-width: 400px;
 	margin: 100px auto;
 	padding: 40px;
-	background-color: #f9f9f9;
-	border-radius: 8px;
+	background-color: #f9f9f97d;
+	border-radius: 40px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	text-align: center;
 }
@@ -40,7 +37,7 @@ body {
 	font-size: 16px;
 	margin-bottom: 15px;
 	border: 1px solid #ccc;
-	border-radius: 5px;
+	border-radius: 10px;
 }
 
 .login-form button {
@@ -49,7 +46,7 @@ body {
 	background-color: #000;
 	color: #fff;
 	border: none;
-	border-radius: 5px;
+	border-radius: 10px;
 	cursor: pointer;
 }
 
