--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 		0deg,
 		rgba(189, 208, 251, 1) 0%,
 		rgba(255, 255, 255, 1) 48%,
-		rgba(255, 207, 189, 1) 100%
+		rgb(255, 241, 234) 100%
 	);
 }
 /* Style the header container */
@@ -165,9 +165,14 @@ body {
 .about {
 	text-align: center;
 	padding: 80px 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 50px;
+}
 
-	/* background-image: linear-gradient(to bottom, #fff, #f1eded); */
-	/* background-size: cover; */
+.about-img img {
+	width: 400px;
 }
 
 .about h2 {
@@ -179,6 +184,7 @@ body {
 	font-size: 18px;
 	margin-bottom: 40px;
 	padding: 80px;
+	max-width: 700px;
 }
 
 /* Media query for about section responsiveness */
