--- a/css/login.css
+++ b/css/login.css
@@ -74,6 +74,7 @@ body {
 @media screen and (max-width: 768px) {
 	.login-container {
 		padding: 20px;
+		max-width: 90%;
 	}
 
 	.login-form label {
