--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -46,6 +46,7 @@ center {
 	border: none;
 	border-radius: 4px;
 	cursor: pointer;
+	text-decoration: none;
 }
 
 /* Media query for responsiveness */
